post request for store new map data

--- a/client/index.html
+++ b/client/index.html
@@ -11,11 +11,11 @@
       });
     }
     </script>
-    <script src="https://apis.google.com/js/platform.js?onload=onLoad" async defer></script>
+    <script src="https://apis.google.com/js/platform.js?onload=onLoad"></script>
     <script src="//d2wy8f7a9ursnm.cloudfront.net/v4/bugsnag.min.js"></script>
     <script src="//d2wy8f7a9ursnm.cloudfront.net/bugsnag-plugins/v1/bugsnag-vue.min.js"></script>
     <title>client</title>
-    <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
+    <link rel="stylesheet" href="./client/font/miso_regular_macroman/stylesheet.css" type="text/css" charset="utf-8" />
   </head>
   <body>
     <div id="app"></div>
