--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="google-signin-client_id" content="808266692102-5mmtiel3cvue10q5t7ibnjlui94f5d96.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="//d2wy8f7a9ursnm.cloudfront.net/v4/bugsnag.min.js"></script>
+    <script src="//d2wy8f7a9ursnm.cloudfront.net/bugsnag-plugins/v1/bugsnag-vue.min.js"></script>
     <title>client</title>
-    <script src="https://apis.google.com/js/api:client.js"></script>
+    <link rel="stylesheet" href="./client/font/miso_regular_macroman/stylesheet.css" type="text/css" charset="utf-8" />
   </head>
   <body>
     <div id="app"></div>
